--- a/index copy 2.html
+++ b/index copy 2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exemplo</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo copy.css">
 </head>
 
 
@@ -14,19 +14,22 @@
     <div class="painel">
 
         <section class="cabecalho">
-            <input type="number" class="entrada">
-            <input type="number" class="entrada">
+            <input type="number" id="numero1"class="entrada">
+            <input type="number" id="numero2"class="entrada">
+            <button onclick="somar()">somar</button>
         </section>
         <main class="corpo">
         <div id="resp"></div>
     </main>
     </div>
     <script>
-        var num1 = ; 
-        var num2 = ;
+        function somar(){
+        var num1 = parseInt(numero1.value) ; 
+        var num2 = parseInt(numero2.value) ;
         var soma = num1 + num2 ;
         document.getElementById("resp").innerHTML=`${num1} + ${num2}=${soma}`;
-    </script>
+        } 
+        </script>
 </body>
 
 </html>
